# RL-Coursework

./: .gitignore  GPU_ACCESS.md  README.md  evaluation.py  main.py  mcts_sim.py  p0_ppo.pt  p1_ppo.pt  pyproject.toml  train.py  train_hybrid.py
best_weights/: dqn_9_best.pt  dqn_best.pt  dqn_best2.pt
cfg/: train_independent_rl.yaml  train_self_play_rl.yaml
ppo_gomoku_model_15x15/: collector.py  core.py  env.py
ppo_gomoku_model_15x15/policy/: __init__.py  ppo.py
ppo_gomoku_model_15x15/runner/: __init__.py  independent_rl_runner.py
ppo_gomoku_model_15x15/utils/: eval.py  module.py  visual.py  wandb.py
src/: alphazero_buffer.py  game_datatypes.py  game_logic.py  gomoku_game.py  gomoku_utils.py  mcts.py  model_loader.py  scene_manager.py  window.py
src/Bots/: alpha_zero_hybrid.py  alpha_zero_resnet.py  alpha_zero_transform.py  alpha_zero_transformer.py  base_bot.py  dqn.py  dqn_bot.py  heuristic_tactical.py  mcts.py  ppo_gomoku_model_15x15.py  random.py
src/Scenes/: bot_training_scene.py  game_scene.py  scene.py
src/cpp/: CMakeLists.txt  game_utils.hpp  mcts_fast.hpp  mcts_py.cpp
test/: test_game_logic.py
